# Arctic-Platform

./: .coveragerc  .gitignore  CONTRIBUTING.md  Makefile  README.md  STYLE_GUIDE.md  pyproject.toml
.github/workflows/: example.yaml  formatting.yaml  unit_tests.yaml
arctic_platform/: testing_utils.py
arctic_platform/integrations/: __init__.py
arctic_platform/integrations/verl/: README.md  __init__.py  adapter.py  grpo_loss.py  register.py  rollout.py  worker.py
arctic_platform/integrations/verl/config/remote_backend/: arctic.yaml
arctic_platform/integrations/verl/examples/: run_bird_grpo_arl.sh  run_gsm8k_grpo_arl.sh
arctic_platform/integrations/verl/v1/: README.md  __init__.py  replica.py  server.py  worker.py
arctic_platform/integrations/verl/v1/examples/: run_gsm8k_grpo_arl_v1.sh
arctic_platform/rl/: DEEPCOMPILE_ZORRO_NOTES.md  README.md  TINKER_COMPAT.md  __init__.py  client.py  config.py  deepspeed_worker.py  http_client.py  http_server.py  ray_client.py  ray_cluster.py  ray_server.py  server.py  tinker_math_rl_driver.py  tinker_router.py  tinker_server.py  weight_sync.py
arctic_platform/rl/examples/: inference_example.py  local_server_example.py  tinker_smoke.py  weight_sync_example.py
arctic_platform/rl/processors/: __init__.py  functional.py  grpo.py  microbatch.py  packing.py  pipeline.py  stats_tracker.py  verl_grpo.py
arctic_platform/rl/projects/long_context_qa/: README.md  download_data.py  run_qwen3_32b_longcontext_grpo_arl_zorro_yes_kl.sh
arctic_platform/rl/projects/txt2sql/: bird_reward.py  preprocess_bird.py  run_qwen3_32b_bird_grpo_arl_zorro_yes.sh  run_qwen3_32b_bird_grpo_arl_zorro_yes_kl.sh
arctic_platform/rl/recipes/long_context_qa/: run_qwen3_32b_longcontext_grpo_arl_zorro_yes_kl.sh
arctic_platform/rl/recipes/txt2sql/: README.md  preprocess_bird.py  run_qwen3_32b_bird_grpo_arl_zorro_yes.sh  run_qwen3_32b_bird_grpo_arl_zorro_yes_kl.sh
arctic_platform/rl/utils/: __init__.py  batch.py  cuda_ipc.py  debug.py  ray_pg.py  record_replay.py  server_models.py
arctic_platform/rl/zorro_train/: README.md  __init__.py  actor.py  demo.py  module_patcher.py  qwen_attention_patcher.py  qwen_model_patcher.py  seqlen_balancing.py  test.py  test_actor_demo.py  test_forward_and_backward.py  test_perf-g1.sh  test_perf-g8.sh  test_perf.py  tests.py  zorro_train.py
cortex-client/: .gitignore  AGENTS.md  DSS-Server-API-Specification.md  README.md  cluster-status.py  dss_neutrino_cli.py  pyproject.toml  setup.py
cortex-client/dss_client/: __init__.py  client.py  common.py  engine.py  neutrino_client.py  neutrino_engine.py  wire.py
cortex-client/dss_client/tui/: __init__.py  __main__.py  app.py  format.py  log_cache.py
cortex-client/examples/: config.json.template  fwd-bwd.json  generate.json  glm-sampling.json  rl.json  sampling.json  training.json
cortex-client/notebook/: qwen3_8b_sft_training.ipynb  qwen3_8b_sft_training_multiplex.ipynb  sampling_walkthrough.ipynb
cortex-client/tests/: test_neutrino_cli.py  test_neutrino_client.py  test_neutrino_engine.py  test_tui_app.py  test_tui_format.py  test_tui_log_cache.py  test_wire.py
recipes/rl/: README.md
recipes/rl/long_context_qa/: README.md  overrides.txt  requirements.txt  restart_multi_ray.sh  run_qwen3_32b_longcontext_grpo_arl_kl.sh  run_qwen3_32b_longcontext_grpo_arl_zorro_yes_kl.sh
recipes/rl/skyrl/: README.md
recipes/rl/skyrl/_lib/arctic_rl/: VENDOR.md  __init__.py  entrypoint.py
recipes/rl/skyrl/_lib/arctic_rl/envs/: __init__.py  bird.py
recipes/rl/skyrl/long_context_qa/: README.md  download_data.py  fsdp_loongrl_entry.py  overrides.txt  requirements.txt  run_qwen3_32b_loongrl_grpo_arl_4node.sh  run_qwen3_32b_loongrl_grpo_fsdp_4node.sh  run_qwen3_8b_loongrl_grpo_arl.sh  run_qwen3_8b_loongrl_grpo_fsdp.sh  sitecustomize.py
recipes/rl/skyrl/long_context_qa/arctic_rl/: __init__.py  entrypoint.py
recipes/rl/skyrl/long_context_qa/arctic_rl/envs/: __init__.py  long_context_qa.py  (+1 more)
recipes/rl/skyrl/simple/: README.md  requirements.txt  run_qwen3_0.6b_gsm8k_grpo_arl.sh
recipes/rl/skyrl/simple_gsm8k/: README.md  download_data.py  overrides.txt  requirements.txt  run_qwen3_0.6b_gsm8k_grpo_arl.sh
recipes/rl/skyrl/txt2sql/: README.md  download_data.py  fsdp_bird_entry.py  overrides.txt  requirements.txt  run_qwen3_32b_bird_grpo_arl_4node.sh  run_qwen3_32b_bird_grpo_fsdp_4node.sh  run_qwen3_8b_bird_grpo_arl.sh  run_qwen3_8b_bird_grpo_fsdp.sh  sitecustomize.py
recipes/rl/skyrl/txt2sql/arctic_rl/: __init__.py  entrypoint.py
recipes/rl/tinker/: grpo_e2e.sh  serve.sh
recipes/rl/txt2sql/: README.md  bird_reward.py  preprocess_bird.py  run_qwen3_32b_bird_grpo_arl_zorro_yes.sh  run_qwen3_32b_bird_grpo_arl_zorro_yes_kl.sh
recipes/rl/verl/: README.md
recipes/rl/verl/long_context_qa/: README.md  download_data.py  overrides.txt  requirements.txt  restart_multi_ray.sh  reward.py  run_qwen3_32b_longcontext_grpo_arl.sh  run_qwen3_32b_longcontext_grpo_baseline.sh
recipes/rl/verl/simple/: README.md  download_data.py  overrides.txt  requirements.txt  run_qwen3_1.7b_gsm8k_grpo_arl.sh
recipes/rl/verl/txt2sql/: README.md  bird_reward.py  overrides.txt  preprocess_bird.py  requirements.txt  restart_multi_ray.sh  run_qwen3_32b_bird_grpo_arl_zorro_yes.sh  run_qwen3_32b_bird_grpo_baseline.sh
scripts/: check_license.py  gated_deltanet_estimator.py  install_deps.py
scripts/trash/: flop_estimator.py  flop_estimator_cli.py
tests/: conftest.py  test_tmp.py
tests/integrations/verl/: conftest.py  test_adapter.py  test_backward_compat.py  test_payload.py  test_register.py
tests/rl/: conftest.py  rl_harness.py  test_config.py  test_cpu_import.py  test_e2e.py  test_generate.py  test_log_prob_engine.py  test_losses.py  test_microbatch.py  test_packing.py  test_stats.py  test_train_engine.py
tests/tinker_layer/: conftest.py  test_adapters.py  test_rl_loop.py  test_skyrl_tx_parity.py  test_tinker_bind.py  test_tinker_router.py  test_tinker_server.py  test_wire_schema.py
tests/zorro_train/: test_dedup.py  test_once_patcher.py  test_seqlen_balancing.py
utils/: tests_fetcher.py
