[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# this is needed when we want to point to a github branch in `dependencies` - leave it enabled
allow-direct-references = true
license-files = [
  "LICENSE",
]

[tool.hatch.build]
include = [
  "arctic_platform_cli.py",
  "arctic_platform",
]

[project.urls]
Homepage = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
Issues = "https://github.com/Snowflake-AI-Research/Arctic-Platform/issues"

[project]
name = "arctic_platform"
version = "0.1.1.dev0"
description = "Snowflake LLM training library w/ RL"
authors = [
    {author = "Tunji Ruwase", email = "tunji.ruwase@snowflake.com"}
    {author = "Stas Bekman", email = "stas.bekman@snowflake.com"},
    {author = "Michael Wyatt", email = "michael.wyatt@snowflake.com"},
    {author = "Jeff Rasley", email = "jeff.rasley@snowflake.com"},
    {author = "Samyam Rajbhandari", email = "samyam.rajbhandari@snowflake.com"},
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
repository = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
keywords = ["llm", "training", "rl"]

classifiers = [
  # How mature is this project?  4 - Beta / 5 - Production/Stable
  "Development Status :: 4 - Beta",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"


# Dependencies for the project
dependencies = [
    "datasets",
    "deepspeed>=0.18.2",  # UlyssesSPAttentionHF.register_with_transformers api change
    "devtools",
    "jsonlines",
    "loguru",
    "openai>=1.48.0",
    "peft",
    "psutil",
    "pydantic>=2.10",
    "nvidia-ml-py",
    "tabulate",
    "torch",
    "tqdm",
    "transformers>=4.56,<5.0.0", # torch_dtype deprecation, 5.0 is unstable at the moment
    "wandb",
    "yq",
]

# Optional development dependencies
[project.optional-dependencies]
all = [
    "arctic_platform[dev]",
    "arctic_platform[docs]",
    "arctic_platform[testing]",
    "arctic_platform[vllm]",
]

dev = [
    "arctic_platform[docs]",
    "arctic_platform[formatting]",
    "arctic_platform[testing]",
]

testing = [
    "pytest",
    "pytest-instafail",
    "parameterized",
    "pytest-xdist",
    "arctic_platform[snowflake]",
]

formatting = [
    "pre-commit",
    "autoflake",
]

vllm = [
    "vllm==0.18.0",
]

