[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# this is needed when we want to point to a github branch in `dependencies` - leave it enabled
allow-direct-references = true
license-files = [
  "LICENSE",
]

[tool.hatch.build]
include = [
  "arctic_platform_cli.py",
  "arctic_platform",
]

[project.urls]
Homepage = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
Issues = "https://github.com/Snowflake-AI-Research/Arctic-Platform/issues"

[project]
name = "arctic_platform"
version = "0.1.1.dev0"
description = "Snowflake LLM training library w/ RL"
authors = [
    {author = "Tunji Ruwase", email = "tunji.ruwase@snowflake.com"},
    {author = "Stas Bekman", email = "stas.bekman@snowflake.com"},
    {author = "Michael Wyatt", email = "michael.wyatt@snowflake.com"},
    {author = "Jeff Rasley", email = "jeff.rasley@snowflake.com"},
    {author = "Samyam Rajbhandari", email = "samyam.rajbhandari@snowflake.com"},
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
repository = "https://github.com/Snowflake-AI-Research/Arctic-Platform"
keywords = ["llm", "training", "rl"]

classifiers = [
  # How mature is this project?  4 - Beta / 5 - Production/Stable
  "Development Status :: 4 - Beta",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"


# Dependencies for the project
dependencies = [
    "datasets",
    "deepspeed>=0.19.2",  # fix the static buffers in mixed precision
    "devtools",
    "jsonlines",
    "loguru",
    "openai>=1.48.0",
    "peft",
    "psutil",
    "pydantic>=2.10",
    "nvidia-ml-py",
    "ray",
    "tabulate",
    "torch",
    "tqdm",
    "transformers>=5.5",
    "wandb",
    "yq",
    "uvicorn",
]

# Optional development dependencies
[project.optional-dependencies]
all = [
    "arctic_platform[dev]",
    "arctic_platform[testing]",
    "arctic_platform[vllm]",
]

dev = [
    "arctic_platform[formatting]",
    "arctic_platform[testing]",
]

testing = [
    "parameterized",
    "pytest-instafail",
    "pytest-flakefinder",
    "pytest-sugar",
    "pytest-timeout",
    "pytest-xdist",
    "pytest",
]

formatting = [
    "pre-commit",
    "autoflake",
]

docs = [
]

snowflake = [
]

vllm = [
    "vllm==0.18.0",
]

[tool.pytest.ini_options]
# Only auto-collect the maintained suite.
testpaths = ["tests"]

# Per-test wall-clock cap
timeout = 300

# Cooperative whole-suite cap (pytest-timeout): checked between tests, so it bounds total wall-clock for a normal
# run. Disable it for intentionally long runs that exceed it, e.g. flakefinder: `pytest --session-timeout=0 ...`.
session_timeout = 3600

timeout_method = "signal"

markers = [
    "vllm: marks a GPU test that drives the vLLM sampling engine; it cannot run concurrently with other GPU tests, so it is pinned to a single xdist worker via xdist_group. Exclude it from a parallel pool with '-m \"not vllm\"' and run it on its own.",
    "gpu_serial: marks a heavyweight GPU test whose body must hold the host-wide GPU lock (serialized across xdist workers by the _serialize_gpu_work autouse fixture).",
]
