[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dss-client"
version = "0.0.2"
description = "DeepSpeed Serverless Client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.28.0",
    "tenacity>=8.2.0",
    "boto3",
    "typing-extensions>=4.0.0; python_version < '3.10'",
    "torch",
    "safetensors",
    "textual>=0.50"
]

[project.scripts]
dss-neutrino = "dss_neutrino_cli:main"
neutrino-tui = "dss_client.tui.__main__:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[tool.setuptools]
py-modules = ["dss_neutrino_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dss_client*"]
exclude = ["tests*"]
